Lowered content on mobile resolutions to avoid overlapping

--- a/app/static/arte_ww/css/global.less
+++ b/app/static/arte_ww/css/global.less
@@ -11,7 +11,7 @@ body {
     @media (max-width: @screen-xs-min) {        
         padding:0; 
         position:absolute;
-        top:0;
+        top:@logo-mobile-height;
         bottom:0;
         left:0;
         right:0;
